--- a/styles/index.css
+++ b/styles/index.css
@@ -5,12 +5,12 @@ body{
     width: 80%;
     margin: 50px auto 0 auto;
 }
-.bar {
+/* .bar {
     fill: red;
 }
 .bar:hover{
     fill: transparent;
-}
+} */
 #title{
     fill: black;
     font-size: 24px;
